2010-06-12  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/opt/207.xml:
	  Entries modified in the MySQL database.

	* db/source/opt/208.xml,
	  db/source/opt/209.xml,
	  db/source/opt/211.xml,
	  db/source/opt/212.xml,
	  db/source/opt/213.xml,
	  db/source/opt/214.xml,
	  db/source/opt/215.xml,
	  db/source/opt/216.xml,
	  db/source/opt/217.xml,
	  db/source/opt/218.xml,
	  db/source/opt/219.xml,
	  db/source/opt/220.xml,
	  db/source/opt/221.xml,
	  db/source/opt/222.xml,
	  db/source/opt/223.xml,
	  db/source/opt/224.xml,
	  db/source/opt/225.xml,
	  db/source/opt/226.xml,
	  db/source/opt/227.xml,
	  db/source/opt/228.xml,
	  db/source/opt/3.xml,
	  db/source/opt/42.xml,
	  db/source/opt/43.xml,
	  db/source/opt/44.xml,
	  db/source/opt/45.xml,
	  db/source/opt/46.xml,
	  db/source/opt/47.xml,
	  db/source/opt/48.xml,
	  db/source/opt/49.xml,
	  db/source/opt/5.xml,
	  db/source/opt/50.xml,
	  db/source/opt/51.xml,
	  db/source/opt/54.xml,
	  db/source/opt/55.xml,
	  db/source/opt/56.xml,
	  db/source/opt/57.xml,
	  db/source/opt/58.xml,
	  db/source/opt/6.xml,
	  db/source/opt/60.xml,
	  db/source/opt/61.xml,
	  db/source/opt/62.xml,
	  db/source/opt/63.xml,
	  db/source/opt/64.xml,
	  db/source/opt/65.xml,
	  db/source/opt/66.xml,
	  db/source/opt/67.xml,
	  db/source/opt/68.xml,
	  db/source/opt/69.xml,
	  db/source/opt/7.xml,
	  db/source/opt/70.xml,
	  db/source/opt/71.xml,
	  db/source/opt/72.xml,
	  db/source/opt/73.xml,
	  db/source/opt/74.xml,
	  db/source/opt/75.xml,
	  db/source/opt/76.xml,
	  db/source/opt/77.xml,
	  db/source/opt/78.xml,
	  db/source/opt/79.xml,
	  db/source/opt/8.xml,
	  db/source/opt/80.xml,
	  db/source/opt/81.xml,
	  db/source/opt/82.xml,
	  db/source/opt/83.xml,
	  db/source/opt/84.xml,
	  db/source/opt/85.xml,
	  db/source/opt/86.xml,
	  db/source/opt/87.xml,
	  db/source/opt/88.xml,
	  db/source/opt/89.xml,
	  db/source/opt/9.xml,
	  db/source/opt/90.xml,
	  db/source/opt/91.xml,
	  db/source/opt/92.xml,