@@ -1,56 +1,0 @@
-<printer id="printer/HP-LaserJet_1020">
-  <make>HP</make>
-  <model>LaserJet 1020</model>
-  <mechanism>
-    <laser />
-    <resolution>
-      <dpi>
-        <x>600</x>
-        <y>600</y>
-      </dpi>
-    </resolution>
-    <margins>
-      <general>
-        <unit>mm</unit>
-        <relative />
-        <top>4</top>
-        <left>4</left>
-        <right>4</right>
-        <bottom>4</bottom>
-      </general>
-    </margins>
-  </mechanism>
-  <url>http://h10010.www1.hp.com/wwpc/us/en/sm/WF05a/18972-236251-236263-14638-f51-439423.html</url>
-  <lang>
-    <proprietary />
-  </lang>
-  <autodetect>
-    <parallel>
-      <ieee1284>MFG:Hewlett-Packard;MDL:HP LaserJet 1020;CMD:ACL;CLS:PRINTER;DES:HP LaserJet 1020;</ieee1284>
-      <commandset>ACL</commandset>
-      <manufacturer>Hewlett-Packard</manufacturer>
-      <model>HP LaserJet 1020</model>
-    </parallel>
-  </autodetect>
-  <functionality>B</functionality>
-  <driver>foo2zjs</driver>
-  <comments>
-    <en>
-
-    This printer is supported by the foo2zjs free software printer driver.
-    &lt;p&gt;
-
-    The printer is faster than the LaserJet 1000 and has a USB
-    connection. It has only 2 MB of RAM and 32 kB of ROM.&lt;p&gt;
-
-    The firmware of the printer must be uploaded after turning it
-    on.  You can use a hotplug/udev script which comes with foo2zjs,
-    or do it manually:
-    &quot;&lt;tt&gt;cat /usr/share/foo2zjs/firmware/sihp1020.dl &gt;
-    /dev/usb/lp0&lt;/tt&gt;&quot;.&lt;p&gt;
-
-      Consumables/Refills: Print cartridge (2000 prints) - $65 Part numbers: Q2612A&lt;p&gt;
-
-    </en>
-  </comments>
-</printer>
