@@ -1,3 +1,8 @@
+2010-06-13  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/HP-LaserJet_1020.xml:
+	  Entries removed from the MySQL database.
+
 2010-06-12  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/opt/207.xml:
